--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -24,6 +24,24 @@
         border-left: 1px solid #e7e7e7;
     }
 }*/
+.success2{
+
+position:absolute;
+width:97%;
+background-color: #E9FCFA;
+border: 1px dashed #006600;
+padding: 8px;
+margin-bottom: 10px;
+}
+
+.danger2{
+position:absolute;
+width:97%;
+background-color: #FFEDED;
+border: 1px dashed #FA206A;
+padding: 8px;
+margin-bottom: 10px;
+}
 
 .navbar-top-links {
     margin-right: 0;
